interpreter/parser.output
State 92 conflicts: 14 shift/reduce
State 93 conflicts: 14 shift/reduce
State 139 conflicts: 22 shift/reduce
State 164 conflicts: 2 shift/reduce
State 166 conflicts: 2 shift/reduce
State 172 conflicts: 1 shift/reduce
State 193 conflicts: 10 shift/reduce


Grammar

    0 $accept: program $end

    1 program: defList

    2 defList: %empty
    3        | defList defs

    4 defs: letdef
    5     | typedef

    6 letdef: "let" def andDef
    7       | "let" "rec" def andDef

    8 andDef: %empty
    9       | andDef "and" def

   10 def: T_id params '=' expr
   11    | T_id params ':' type '=' expr
   12    | "mutable" T_id
   13    | "mutable" commaExprs ']'
   14    | "mutable" T_id ':' type
   15    | "mutable" commaExprs ']' ':' type

   16 params: %empty
   17       | params par

   18 par: T_id
   19    | '(' T_id ':' type ')'

   20 typedef: "type" tdef andTdef

   21 andTdef: %empty
   22        | andTdef "and" tdef

   23 tdef: T_id '=' constr bar_constrs

   24 bar_constrs: %empty
   25            | bar_constrs '|' constr

   26 constr: T_Id
   27       | T_Id "of" types

   28 types: type
   29      | types type

   30 type: "unit"
   31     | "int"
   32     | "char"
   33     | "bool"
   34     | "float"
   35     | T_id
   36     | '(' type ')'
   37     | type "->" type
   38     | type "ref"
   39     | "array" "of" type

   40 exprs: %empty
   41      | exprs expr

   42 commaExprs: T_id '[' expr
   43           | commaExprs ',' expr

   44 expr: T_int_const
   45     | T_float_const
   46     | T_char_const
   47     | T_string_literal
   48     | "true"
   49     | "false"
   50     | '(' ')'
   51     | '(' expr ')'
   52     | '+' expr
   53     | '-' expr
   54     | "+." expr
   55     | "-." expr
   56     | '!' expr
   57     | "not" expr
   58     | expr '+' expr
   59     | expr '-' expr
   60     | expr '*' expr
   61     | expr '/' expr
   62     | expr "+." expr
   63     | expr "-." expr
   64     | expr "*." expr
   65     | expr "/." expr
   66     | expr "mod" expr
   67     | expr "**" expr
   68     | expr '=' expr
   69     | expr "<>" expr
   70     | expr '<' expr
   71     | expr '>' expr
   72     | expr "<=" expr
   73     | expr ">=" expr
   74     | expr "==" expr
   75     | expr "!=" expr
   76     | expr "&&" expr
   77     | expr "||" expr
   78     | expr ';' expr
   79     | expr ":=" expr
   80     | T_id exprs
   81     | T_Id exprs
   82     | "dim" T_id
   83     | "dim" T_int_const T_id
   84     | "new" type
   85     | "delete" expr
   86     | commaExprs ']'
   87     | letdef "in" expr
   88     | "begin" expr "end"
   89     | "if" expr "then" expr
   90     | "if" expr "then" expr "else" expr
   91     | "while" expr "do" expr "done"
   92     | "for" T_id '=' expr "to" expr "do" expr "done"
   93     | "for" T_id '=' expr "downto" expr "do" expr "done"
   94     | "match" expr "with" clauses "end"

   95 patterns: %empty
   96         | patterns pattern

   97 pattern: '+' T_int_const
   98        | '-' T_int_const
   99        | "+." T_float_const
  100        | "-." T_float_const
  101        | T_char_const
  102        | "true"
  103        | "false"
  104        | T_id
  105        | '(' pattern ')'
  106        | T_Id patterns

  107 clauses: clause
  108        | clauses '|' clause

  109 clause: pattern "->" expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 56
'(' (40) 19 36 50 51 105
')' (41) 19 36 50 51 105
'*' (42) 60
'+' (43) 52 58 97
',' (44) 43
'-' (45) 53 59 98
'/' (47) 61
':' (58) 11 14 15 19
';' (59) 78
'<' (60) 70
'=' (61) 10 11 23 68 92 93
'>' (62) 71
'[' (91) 42
']' (93) 13 15 86
'|' (124) 25 108
error (256)
"and" (258) 9 22
"array" (259) 39
"begin" (260) 88
"bool" (261) 33
"char" (262) 32
"delete" (263) 85
"dim" (264) 82 83
"do" (265) 91 92 93
"done" (266) 91 92 93
"downto" (267) 93
"else" (268) 90
"end" (269) 88 94
"false" (270) 49 103
"float" (271) 34
"for" (272) 92 93
"if" (273) 89 90
"in" (274) 87
"int" (275) 31
"let" (276) 6 7
"match" (277) 94
"mutable" (278) 12 13 14 15
"new" (279) 84
"of" (280) 27 39
"rec" (281) 7
"ref" (282) 38
"then" (283) 89 90
"to" (284) 92
"true" (285) 48 102
"type" (286) 20
"unit" (287) 30
"while" (288) 91
"with" (289) 94
"+." (290) 54 62 99
"&&" (291) 76
"||" (292) 77
"**" (293) 67
":=" (294) 79
"!=" (295) 75
"==" (296) 74
">=" (297) 73
"<=" (298) 72
"<>" (299) 69
"-." (300) 55 63 100
"*." (301) 64
"/." (302) 65
"->" (303) 37 109
"mod" (304) 66
"not" (305) 57
T_id (306) 10 11 12 14 18 19 23 35 42 80 82 83 92 93 104
T_Id (307) 26 27 81 106
T_int_const (308) 44 83 97 98
T_float_const (309) 45 99 100
T_char_const (310) 46 101
T_string_literal (311) 47
UPLUS (312)
UMINUS (313)
UPLUS_DOT (314)
UMINUS_DOT (315)
FUNCTION_CALL (316)
CONSTRUCTOR_CALL (317)


Nonterminals, with rules where they appear

$accept (79)
    on left: 0
program (80)
    on left: 1, on right: 0
defList (81)
    on left: 2 3, on right: 1 3
defs (82)
    on left: 4 5, on right: 3
letdef (83)
    on left: 6 7, on right: 4 87
andDef (84)
    on left: 8 9, on right: 6 7 9
def (85)
    on left: 10 11 12 13 14 15, on right: 6 7 9
params (86)
    on left: 16 17, on right: 10 11 17
par (87)
    on left: 18 19, on right: 17
typedef (88)
    on left: 20, on right: 5
andTdef (89)
    on left: 21 22, on right: 20 22
tdef (90)
    on left: 23, on right: 20 22
bar_constrs (91)
    on left: 24 25, on right: 23 25
constr (92)
    on left: 26 27, on right: 23 25
types (93)
    on left: 28 29, on right: 27 29
type (94)
    on left: 30 31 32 33 34 35 36 37 38 39, on right: 11 14 15 19 28
    29 36 37 38 39 84
exprs (95)
    on left: 40 41, on right: 41 80 81
commaExprs (96)
    on left: 42 43, on right: 13 15 43 86
expr (97)
    on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
    62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82
    83 84 85 86 87 88 89 90 91 92 93 94, on right: 10 11 41 42 43 51
    52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
    73 74 75 76 77 78 79 85 87 88 89 90 91 92 93 94 109
patterns (98)
    on left: 95 96, on right: 96 106
pattern (99)
    on left: 97 98 99 100 101 102 103 104 105 106, on right: 96 105
    109
clauses (100)
    on left: 107 108, on right: 94 108
clause (101)
    on left: 109, on right: 107 108


State 0

    0 $accept: . program $end

    $default  reduce using rule 2 (defList)

    program  go to state 1
    defList  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: defList .
    3 defList: defList . defs

    "let"   shift, and go to state 4
    "type"  shift, and go to state 5

    $default  reduce using rule 1 (program)

    defs     go to state 6
    letdef   go to state 7
    typedef  go to state 8


State 3

    0 $accept: program $end .

    $default  accept


State 4

    6 letdef: "let" . def andDef
    7       | "let" . "rec" def andDef

    "mutable"  shift, and go to state 9
    "rec"      shift, and go to state 10
    T_id       shift, and go to state 11

    def  go to state 12


State 5

   20 typedef: "type" . tdef andTdef

    T_id  shift, and go to state 13

    tdef  go to state 14


State 6

    3 defList: defList defs .

    $default  reduce using rule 3 (defList)


State 7

    4 defs: letdef .

    $default  reduce using rule 4 (defs)


State 8

    5 defs: typedef .

    $default  reduce using rule 5 (defs)


State 9

   12 def: "mutable" . T_id
   13    | "mutable" . commaExprs ']'
   14    | "mutable" . T_id ':' type
   15    | "mutable" . commaExprs ']' ':' type

    T_id  shift, and go to state 15

    commaExprs  go to state 16


State 10

    7 letdef: "let" "rec" . def andDef

    "mutable"  shift, and go to state 9
    T_id       shift, and go to state 11

    def  go to state 17


State 11

   10 def: T_id . params '=' expr
   11    | T_id . params ':' type '=' expr

    $default  reduce using rule 16 (params)

    params  go to state 18


State 12

    6 letdef: "let" def . andDef

    $default  reduce using rule 8 (andDef)

    andDef  go to state 19


State 13

   23 tdef: T_id . '=' constr bar_constrs

    '='  shift, and go to state 20


State 14

   20 typedef: "type" tdef . andTdef

    $default  reduce using rule 21 (andTdef)

    andTdef  go to state 21


State 15

   12 def: "mutable" T_id .
   14    | "mutable" T_id . ':' type
   42 commaExprs: T_id . '[' expr

    '['  shift, and go to state 22
    ':'  shift, and go to state 23

    $default  reduce using rule 12 (def)


State 16

   13 def: "mutable" commaExprs . ']'
   15    | "mutable" commaExprs . ']' ':' type
   43 commaExprs: commaExprs . ',' expr

    ']'  shift, and go to state 24
    ','  shift, and go to state 25


State 17

    7 letdef: "let" "rec" def . andDef

    $default  reduce using rule 8 (andDef)

    andDef  go to state 26


State 18

   10 def: T_id params . '=' expr
   11    | T_id params . ':' type '=' expr
   17 params: params . par

    T_id  shift, and go to state 27
    '='   shift, and go to state 28
    ':'   shift, and go to state 29
    '('   shift, and go to state 30

    par  go to state 31


State 19

    6 letdef: "let" def andDef .
    9 andDef: andDef . "and" def

    "and"  shift, and go to state 32

    $default  reduce using rule 6 (letdef)


State 20

   23 tdef: T_id '=' . constr bar_constrs

    T_Id  shift, and go to state 33

    constr  go to state 34


State 21

   20 typedef: "type" tdef andTdef .
   22 andTdef: andTdef . "and" tdef

    "and"  shift, and go to state 35

    $default  reduce using rule 20 (typedef)


State 22

   42 commaExprs: T_id '[' . expr

    "begin"           shift, and go to state 36
    "delete"          shift, and go to state 37
    "dim"             shift, and go to state 38
    "false"           shift, and go to state 39
    "for"             shift, and go to state 40
    "if"              shift, and go to state 41
    "let"             shift, and go to state 4
    "match"           shift, and go to state 42
    "new"             shift, and go to state 43
    "true"            shift, and go to state 44
    "while"           shift, and go to state 45
    "+."              shift, and go to state 46
    "-."              shift, and go to state 47
    "not"             shift, and go to state 48
    T_id              shift, and go to state 49
    T_Id              shift, and go to state 50
    T_int_const       shift, and go to state 51
    T_float_const     shift, and go to state 52
    T_char_const      shift, and go to state 53
    T_string_literal  shift, and go to state 54
    '+'               shift, and go to state 55
    '-'               shift, and go to state 56
    '!'               shift, and go to state 57
    '('               shift, and go to state 58

    letdef      go to state 59
    commaExprs  go to state 60
    expr        go to state 61


State 23

   14 def: "mutable" T_id ':' . type

    "array"  shift, and go to state 62
    "bool"   shift, and go to state 63
    "char"   shift, and go to state 64
    "float"  shift, and go to state 65
    "int"    shift, and go to state 66
    "unit"   shift, and go to state 67
    T_id     shift, and go to state 68
    '('      shift, and go to state 69

    type  go to state 70


State 24

   13 def: "mutable" commaExprs ']' .
   15    | "mutable" commaExprs ']' . ':' type

    ':'  shift, and go to state 71

    $default  reduce using rule 13 (def)


State 25

   43 commaExprs: commaExprs ',' . expr

    "begin"           shift, and go to state 36
    "delete"          shift, and go to state 37
    "dim"             shift, and go to state 38
    "false"           shift, and go to state 39
    "for"             shift, and go to state 40
    "if"              shift, and go to state 41
    "let"             shift, and go to state 4
    "match"           shift, and go to state 42
    "new"             shift, and go to state 43
    "true"            shift, and go to state 44
    "while"           shift, and go to state 45
    "+."              shift, and go to state 46
    "-."              shift, and go to state 47
    "not"             shift, and go to state 48
    T_id              shift, and go to state 49
    T_Id              shift, and go to state 50
    T_int_const       shift, and go to state 51
    T_float_const     shift, and go to state 52
    T_char_const      shift, and go to state 53
    T_string_literal  shift, and go to state 54
    '+'               shift, and go to state 55
    '-'               shift, and go to state 56
    '!'               shift, and go to state 57
    '('               shift, and go to state 58

    letdef      go to state 59
    commaExprs  go to state 60
    expr        go to state 72


State 26

    7 letdef: "let" "rec" def andDef .
    9 andDef: andDef . "and" def

    "and"  shift, and go to state 32

    $default  reduce using rule 7 (letdef)


State 27

   18 par: T_id .

    $default  reduce using rule 18 (par)


State 28

   10 def: T_id params '=' . expr

    "begin"           shift, and go to state 36
    "delete"          shift, and go to state 37
    "dim"             shift, and go to state 38
    "false"           shift, and go to state 39
    "for"             shift, and go to state 40
    "if"              shift, and go to state 41
    "let"             shift, and go to state 4
    "match"           shift, and go to state 42
    "new"             shift, and go to state 43
    "true"            shift, and go to state 44
    "while"           shift, and go to state 45
    "+."              shift, and go to state 46
    "-."              shift, and go to state 47
    "not"             shift, and go to state 48
    T_id              shift, and go to state 49
    T_Id              shift, and go to state 50
    T_int_const       shift, and go to state 51
    T_float_const     shift, and go to state 52
    T_char_const      shift, and go to state 53
    T_string_literal  shift, and go to state 54
    '+'               shift, and go to state 55
    '-'               shift, and go to state 56
    '!'               shift, and go to state 57
    '('               shift, and go to state 58

    letdef      go to state 59
    commaExprs  go to state 60
    expr        go to state 73


State 29

   11 def: T_id params ':' . type '=' expr

    "array"  shift, and go to state 62
    "bool"   shift, and go to state 63
    "char"   shift, and go to state 64
    "float"  shift, and go to state 65
    "int"    shift, and go to state 66
    "unit"   shift, and go to state 67
    T_id     shift, and go to state 68
    '('      shift, and go to state 69

    type  go to state 74


State 30

   19 par: '(' . T_id ':' type ')'

    T_id  shift, and go to state 75


State 31

   17 params: params par .

    $default  reduce using rule 17 (params)


State 32

    9 andDef: andDef "and" . def

    "mutable"  shift, and go to state 9
    T_id       shift, and go to state 11

    def  go to state 76


State 33

   26 constr: T_Id .
   27       | T_Id . "of" types

    "of"  shift, and go to state 77

    $default  reduce using rule 26 (constr)


State 34

   23 tdef: T_id '=' constr . bar_constrs

    $default  reduce using rule 24 (bar_constrs)

    bar_constrs  go to state 78


State 35

   22 andTdef: andTdef "and" . tdef

    T_id  shift, and go to state 13

    tdef  go to state 79


State 36

   88 expr: "begin" . expr "end"

    "begin"           shift, and go to state 36
    "delete"          shift, and go to state 37
    "dim"             shift, and go to state 38
    "false"           shift, and go to state 39
    "for"             shift, and go to state 40
    "if"              shift, and go to state 41
    "let"             shift, and go to state 4
    "match"           shift, and go to state 42
    "new"             shift, and go to state 43
    "true"            shift, and go to state 44
    "while"           shift, and go to state 45
    "+."              shift, and go to state 46
    "-."              shift, and go to state 47
    "not"             shift, and go to state 48
    T_id              shift, and go to state 49
    T_Id              shift, and go to state 50
    T_int_const       shift, and go to state 51
    T_float_const     shift, and go to state 52
    T_char_const      shift, and go to state 53
    T_string_literal  shift, and go to state 54
    '+'               shift, and go to state 55
    '-'               shift, and go to state 56
    '!'               shift, and go to state 57
    '('               shift, and go to state 58

    letdef      go to state 59
    commaExprs  go to state 60
    expr        go to state 80


State 37

   85 expr: "delete" . expr

    "begin"           shift, and go to state 36
    "delete"          shift, and go to state 37
    "dim"             shift, and go to state 38
    "false"           shift, and go to state 39
    "for"             shift, and go to state 40
    "if"              shift, and go to state 41
    "let"             shift, and go to state 4
    "match"           shift, and go to state 42
    "new"             shift, and go to state 43
    "true"            shift, and go to state 44
    "while"           shift, and go to state 45
    "+."              shift, and go to state 46
    "-."              shift, and go to state 47
    "not"             shift, and go to state 48
    T_id              shift, and go to state 49
    T_Id              shift, and go to state 50
    T_int_const       shift, and go to state 51
    T_float_const     shift, and go to state 52
    T_char_const      shift, and go to state 53
    T_string_literal  shift, and go to state 54
    '+'               shift, and go to state 55
    '-'               shift, and go to state 56
    '!'               shift, and go to state 57
    '('               shift, and go to state 58

    letdef      go to state 59
    commaExprs  go to state 60
    expr        go to state 81


State 38

   82 expr: "dim" . T_id
   83     | "dim" . T_int_const T_id

    T_id         shift, and go to state 82
    T_int_const  shift, and go to state 83


State 39

   49 expr: "false" .

    $default  reduce using rule 49 (expr)


State 40

   92 expr: "for" . T_id '=' expr "to" expr "do" expr "done"
   93     | "for" . T_id '=' expr "downto" expr "do" expr "done"

    T_id  shift, and go to state 84


State 41

   89 expr: "if" . expr "then" expr
   90     | "if" . expr "then" expr "else" expr

    "begin"           shift, and go to state 36
    "delete"          shift, and go to state 37
    "dim"             shift, and go to state 38
    "false"           shift, and go to state 39
    "for"             shift, and go to state 40
    "if"              shift, and go to state 41
    "let"             shift, and go to state 4
    "match"           shift, and go to state 42
    "new"             shift, and go to state 43
    "true"            shift, and go to state 44
    "while"           shift, and go to state 45
    "+."              shift, and go to state 46
    "-."              shift, and go to state 47
    "not"             shift, and go to state 48
    T_id              shift, and go to state 49
    T_Id              shift, and go to state 50
    T_int_const       shift, and go to state 51
    T_float_const     shift, and go to state 52
    T_char_const      shift, and go to state 53
    T_string_literal  shift, and go to state 54
    '+'               shift, and go to state 55
    '-'               shift, and go to state 56
    '!'               shift, and go to state 57
    '('               shift, and go to state 58

    letdef      go to state 59
    commaExprs  go to state 60
    expr        go to state 85


State 42

   94 expr: "match" . expr "with" clauses "end"

    "begin"           shift, and go to state 36
    "delete"          shift, and go to state 37
    "dim"             shift, and go to state 38
    "false"           shift, and go to state 39
    "for"             shift, and go to state 40
    "if"              shift, and go to state 41
    "let"             shift, and go to state 4
    "match"           shift, and go to state 42
    "new"             shift, and go to state 43
    "true"            shift, and go to state 44
    "while"           shift, and go to state 45
    "+."              shift, and go to state 46
    "-."              shift, and go to state 47
    "not"             shift, and go to state 48
    T_id              shift, and go to state 49
    T_Id              shift, and go to state 50
    T_int_const       shift, and go to state 51
    T_float_const     shift, and go to state 52
    T_char_const      shift, and go to state 53
    T_string_literal  shift, and go to state 54
    '+'               shift, and go to state 55
    '-'               shift, and go to state 56
    '!'               shift, and go to state 57
    '('               shift, and go to state 58

    letdef      go to state 59
    commaExprs  go to state 60
    expr        go to state 86


State 43

   84 expr: "new" . type

    "array"  shift, and go to state 62
    "bool"   shift, and go to state 63
    "char"   shift, and go to state 64
    "float"  shift, and go to state 65
    "int"    shift, and go to state 66
    "unit"   shift, and go to state 67
    T_id     shift, and go to state 68
    '('      shift, and go to state 69

    type  go to state 87


State 44

   48 expr: "true" .

    $default  reduce using rule 48 (expr)


State 45

   91 expr: "while" . expr "do" expr "done"

    "begin"           shift, and go to state 36
    "delete"          shift, and go to state 37
    "dim"             shift, and go to state 38
    "false"           shift, and go to state 39
    "for"             shift, and go to state 40
    "if"              shift, and go to state 41
    "let"             shift, and go to state 4
    "match"           shift, and go to state 42
    "new"             shift, and go to state 43
    "true"            shift, and go to state 44
    "while"           shift, and go to state 45
    "+."              shift, and go to state 46
    "-."              shift, and go to state 47
    "not"             shift, and go to state 48
    T_id              shift, and go to state 49
    T_Id              shift, and go to state 50
    T_int_const       shift, and go to state 51
    T_float_const     shift, and go to state 52
    T_char_const      shift, and go to state 53
    T_string_literal  shift, and go to state 54
    '+'               shift, and go to state 55
    '-'               shift, and go to state 56
    '!'               shift, and go to state 57
    '('               shift, and go to state 58

    letdef      go to state 59
    commaExprs  go to state 60
    expr        go to state 88


State 46

   54 expr: "+." . expr

    "begin"           shift, and go to state 36
    "delete"          shift, and go to state 37
    "dim"             shift, and go to state 38
    "false"           shift, and go to state 39
    "for"             shift, and go to state 40
    "if"              shift, and go to state 41
    "let"             shift, and go to state 4
    "match"           shift, and go to state 42
    "new"             shift, and go to state 43
    "true"            shift, and go to state 44
    "while"           shift, and go to state 45
    "+."              shift, and go to state 46
    "-."              shift, and go to state 47
    "not"             shift, and go to state 48
    T_id              shift, and go to state 49
    T_Id              shift, and go to state 50
    T_int_const       shift, and go to state 51
    T_float_const     shift, and go to state 52
    T_char_const      shift, and go to state 53
    T_string_literal  shift, and go to state 54
    '+'               shift, and go to state 55
    '-'               shift, and go to state 56
    '!'               shift, and go to state 57
    '('               shift, and go to state 58

    letdef      go to state 59
    commaExprs  go to state 60
    expr        go to state 89


State 47

   55 expr: "-." . expr

    "begin"           shift, and go to state 36
    "delete"          shift, and go to state 37
    "dim"             shift, and go to state 38
    "false"           shift, and go to state 39
    "for"             shift, and go to state 40
    "if"              shift, and go to state 41
    "let"             shift, and go to state 4
    "match"           shift, and go to state 42
    "new"             shift, and go to state 43
    "true"            shift, and go to state 44
    "while"           shift, and go to state 45
    "+."              shift, and go to state 46
    "-."              shift, and go to state 47
    "not"             shift, and go to state 48
    T_id              shift, and go to state 49
    T_Id              shift, and go to state 50
    T_int_const       shift, and go to state 51
    T_float_const     shift, and go to state 52
    T_char_const      shift, and go to state 53
    T_string_literal  shift, and go to state 54
    '+'               shift, and go to state 55
    '-'               shift, and go to state 56
    '!'               shift, and go to state 57
    '('               shift, and go to state 58

    letdef      go to state 59
    commaExprs  go to state 60
    expr        go to state 90


State 48

   57 expr: "not" . expr

    "begin"           shift, and go to state 36
    "delete"          shift, and go to state 37
    "dim"             shift, and go to state 38
    "false"           shift, and go to state 39
    "for"             shift, and go to state 40
    "if"              shift, and go to state 41
    "let"             shift, and go to state 4
    "match"           shift, and go to state 42
    "new"             shift, and go to state 43
    "true"            shift, and go to state 44
    "while"           shift, and go to state 45
    "+."              shift, and go to state 46
    "-."              shift, and go to state 47
    "not"             shift, and go to state 48
    T_id              shift, and go to state 49
    T_Id              shift, and go to state 50
    T_int_const       shift, and go to state 51
    T_float_const     shift, and go to state 52
    T_char_const      shift, and go to state 53
    T_string_literal  shift, and go to state 54
    '+'               shift, and go to state 55
    '-'               shift, and go to state 56
    '!'               shift, and go to state 57
    '('               shift, and go to state 58

    letdef      go to state 59
    commaExprs  go to state 60
    expr        go to state 91


State 49

   42 commaExprs: T_id . '[' expr
   80 expr: T_id . exprs

    '['  shift, and go to state 22

    $default  reduce using rule 40 (exprs)

    exprs  go to state 92


State 50

   81 expr: T_Id . exprs

    $default  reduce using rule 40 (exprs)

    exprs  go to state 93


State 51

   44 expr: T_int_const .

    $default  reduce using rule 44 (expr)


State 52

   45 expr: T_float_const .

    $default  reduce using rule 45 (expr)


State 53

   46 expr: T_char_const .

    $default  reduce using rule 46 (expr)


State 54

   47 expr: T_string_literal .

    $default  reduce using rule 47 (expr)


State 55

   52 expr: '+' . expr

    "begin"           shift, and go to state 36
    "delete"          shift, and go to state 37
    "dim"             shift, and go to state 38
    "false"           shift, and go to state 39
    "for"             shift, and go to state 40
    "if"              shift, and go to state 41
    "let"             shift, and go to state 4
    "match"           shift, and go to state 42
    "new"             shift, and go to state 43
    "true"            shift, and go to state 44
    "while"           shift, and go to state 45
    "+."              shift, and go to state 46
    "-."              shift, and go to state 47
    "not"             shift, and go to state 48
    T_id              shift, and go to state 49
    T_Id              shift, and go to state 50
    T_int_const       shift, and go to state 51
    T_float_const     shift, and go to state 52
    T_char_const      shift, and go to state 53
    T_string_literal  shift, and go to state 54
    '+'               shift, and go to state 55
    '-'               shift, and go to state 56
    '!'               shift, and go to state 57
    '('               shift, and go to state 58

    letdef      go to state 59
    commaExprs  go to state 60
    expr        go to state 94


State 56

   53 expr: '-' . expr

    "begin"           shift, and go to state 36
    "delete"          shift, and go to state 37
    "dim"             shift, and go to state 38
    "false"           shift, and go to state 39
    "for"             shift, and go to state 40
    "if"              shift, and go to state 41
    "let"             shift, and go to state 4
    "match"           shift, and go to state 42
    "new"             shift, and go to state 43
    "true"            shift, and go to state 44
    "while"           shift, and go to state 45
    "+."              shift, and go to state 46
    "-."              shift, and go to state 47
    "not"             shift, and go to state 48
    T_id              shift, and go to state 49
    T_Id              shift, and go to state 50
    T_int_const       shift, and go to state 51
    T_float_const     shift, and go to state 52
    T_char_const      shift, and go to state 53
    T_string_literal  shift, and go to state 54
    '+'               shift, and go to state 55
    '-'               shift, and go to state 56
    '!'               shift, and go to state 57
    '('               shift, and go to state 58

    letdef      go to state 59
    commaExprs  go to state 60
    expr        go to state 95


State 57

   56 expr: '!' . expr
